--- a/bms-admin/src/main/resources/templates/login.html
+++ b/bms-admin/src/main/resources/templates/login.html
@@ -23,7 +23,7 @@
 <body class="hold-transition login-page">
 <div class="login-box" id="bmsBoot" v-cloak>
   <div class="login-logo">
-    <b>人人权限系统</b>
+    <b>bms-boot</b>
   </div>
   <!-- /.login-logo -->
   <div class="login-box-body">
