--- a/bms-admin/src/main/resources/templates/login.html
+++ b/bms-admin/src/main/resources/templates/login.html
@@ -6,9 +6,9 @@
   <title>bms-boot</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"/>
-  <link th:rel="stylesheet" th:href="@{/css/bootstrap.min.css}" type="text/css"/>
-  <link th:rel="stylesheet" th:href="@{/css/font-awesome.min.css}" type="text/css"/>
-  <link th:rel="stylesheet" th:href="@{/css/AdminLTE.min.css}" type="text/css"/>
+  <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" type="text/css"/>
+  <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" type="text/css"/>
+  <link rel="stylesheet" th:href="@{/css/AdminLTE.min.css}" type="text/css"/>
   <!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
   <link th:rel="stylesheet" th:href="@{/css/all-skins.min.css}" href="../css/all-skins.min.css" type="text/css"/>
