--- a/bms-admin/src/main/resources/templates/main.html
+++ b/bms-admin/src/main/resources/templates/main.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>欢迎页</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <link rel="stylesheet" href="${request.contextPath}/statics/css/bootstrap.min.css">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
 </head>
 <body>
 <div class="panel panel-default">
-    <div class="panel-heading">基本信息</div>
+    <!--<div class="panel-heading">基本信息</div>
     <div style="padding: 10px 0 20px 10px;">
         <h3>&nbsp;&nbsp;&nbsp;项目介绍</h3>
         <ul>
@@ -31,7 +31,7 @@
             <li>高级群：324780204(大牛云集，跟大牛学习新技能)</li>
             <li>普通群：145799952(学习交流，互相解答各种疑问)</li>
         </ul>
-    </div>
+    </div>-->
 </div>
 </body>
 </html>
