--- a/bms-admin/src/main/resources/templates/index.html
+++ b/bms-admin/src/main/resources/templates/index.html
@@ -78,19 +78,19 @@
         </section>
 
         <!-- Main content -->
-        <section class="content" style="background:#fff;">
+       <section class="content" style="background:#fff;">
             <iframe scrolling="yes" frameborder="0"
                     style="width:100%;min-height:200px;overflow:visible;background:#fff;" :src="main"></iframe>
         </section>
         <!-- /.content -->
-        <section class="main-footer">
-            <footer class="main-footer">
+            <!--<footer class="main-footer" style="width: 100%">
                 <div class="pull-right hidden-xs">
                     Version 3.1.0
                 </div>
-                Copyright &copy; 2018 <a href="http://www.renren.io" target="_blank">renren.io</a> All Rights Reserved
-            </footer>
-        </section>
+                Copyright &copy; 2018 <a href="#" target="_blank">com.github.pleier</a> All Rights Reserved
+            </footer>-->
+
+
     </div>
     <!-- /.content-wrapper -->
 
