--- a/bms-admin/src/main/resources/templates/index1.html
+++ b/bms-admin/src/main/resources/templates/index1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="UTF-8">
 	<title>人人权限系统</title>
@@ -9,9 +9,9 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">	
 	<meta name="apple-mobile-web-app-capable" content="yes">	
 	<meta name="format-detection" content="telephone=no">	
-	<link rel="stylesheet" type="text/css" href="${request.contextPath}/statics/plugins/layui/css/layui.css">
-	<link rel="stylesheet" type="text/css" href="${request.contextPath}/statics/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="${request.contextPath}/statics/css/index1.css">
+	<link rel="stylesheet" type="text/css" th:href="@{/plugins/layui/css/layui.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/index1.css}">
 </head>
 <body>
 <div class="layui-layout layui-layout-admin" id="layui_layout">
@@ -105,9 +105,9 @@
 	</div>
 </div>
 
-<script type="text/javascript" src="${request.contextPath}/statics/libs/jquery.min.js"></script>
-<script type="text/javascript" src="${request.contextPath}/statics/plugins/layui/layui.js"></script>
-<script type="text/javascript" src="${request.contextPath}/statics/libs/vue.min.js"></script>
-<script type="text/javascript" src="${request.contextPath}/statics/js/index1.js"></script>
+<script type="text/javascript" th:src="@{/libs/jquery.min.js}"></script>
+<script type="text/javascript" th:src="@{/plugins/layui/layui.js}"></script>
+<script type="text/javascript" th:src="@{/libs/vue.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/index1.js}"></script>
 </body>
 </html>
