--- a/bms-admin/src/main/resources/templates/modules/sys/menu.html
+++ b/bms-admin/src/main/resources/templates/modules/sys/menu.html
@@ -21,7 +21,7 @@
 			<shiro:hasPermission name="sys:menu:update">
 				<a class="btn btn-primary" @click="update"><i class="fa fa-pencil-square-o"></i>&nbsp;修改</a>
 			</shiro:hasPermission>
-			<shiro:hasPermission name="sada:dsas">
+			<shiro:hasPermission name="sys:menu:delete">
 				<a class="btn btn-primary" @click="del"><i class="fa fa-trash-o"></i>&nbsp;删除</a>
 			</shiro:hasPermission>
 		</div>
