--- a/bms-admin/src/main/resources/templates/modules/sys/menu.html
+++ b/bms-admin/src/main/resources/templates/modules/sys/menu.html
@@ -12,7 +12,7 @@
 <script th:src="@{/plugins/treegrid/tree.table.js}"></script>
 </head>
 <body>
-<div id="rrapp" v-cloak>
+<div id="bmsApp" v-cloak>
 	<div v-show="showList">
 		<div class="grid-btn">
 			<shiro:hasPermission name="sys:menu:save">
