--- a/bms-admin/src/main/resources/templates/index.html
+++ b/bms-admin/src/main/resources/templates/index.html
@@ -27,9 +27,9 @@
     <header class="main-header">
         <a href="javascript:void(0);" class="logo">
             <!-- mini logo for sidebar mini 50x50 pixels -->
-            <span class="logo-mini"><b>人人</b></span>
+            <span class="logo-mini"><b>BMS-ADMIN</b></span>
             <!-- logo for regular state and mobile devices -->
-            <span class="logo-lg"><b>人人权限系统</b></span>
+            <span class="logo-lg"><b>BMS-ADMIN</b></span>
         </a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
