--- a/bms-admin/src/main/resources/templates/modules/sys/dept.html
+++ b/bms-admin/src/main/resources/templates/modules/sys/dept.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
 <head>
-<title>部门管理</title>
-<#include "/header.html">
-<link rel="stylesheet" href="${request.contextPath}/statics/css/bootstrap-table.min.css">
-<link rel="stylesheet" href="${request.contextPath}/statics/plugins/treegrid/jquery.treegrid.css">
-<script src="${request.contextPath}/statics/libs/bootstrap-table.min.js"></script>
-<script src="${request.contextPath}/statics/plugins/treegrid/jquery.treegrid.min.js"></script>
-<script src="${request.contextPath}/statics/plugins/treegrid/jquery.treegrid.bootstrap3.js"></script>
-<script src="${request.contextPath}/statics/plugins/treegrid/jquery.treegrid.extension.js"></script>
-<script src="${request.contextPath}/statics/plugins/treegrid/tree.table.js"></script>
+	<title>部门管理</title>
+	<th:block th:include="/header.html"/>
+<link rel="stylesheet" th:href="@{/css/bootstrap-table.min.css}">
+<link rel="stylesheet" th:href="@{/plugins/treegrid/jquery.treegrid.css}">
+<script th:src="@{/libs/bootstrap-table.min.js}"></script>
+<script th:src="@{/plugins/treegrid/jquery.treegrid.min.js}"></script>
+<script th:src="@{/plugins/treegrid/jquery.treegrid.bootstrap3.js}"></script>
+<script th:src="@{/plugins/treegrid/jquery.treegrid.extension.js}"></script>
+<script th:src="@{/plugins/treegrid/tree.table.js}"></script>
 </head>
 <body>
-<div id="rrapp" v-cloak>
+<div id="bmsApp" v-cloak>
 	<div v-show="showList">
 		<div class="grid-btn">
-			<#if shiro.hasPermission("sys:dept:save")>
-			<a class="btn btn-primary" @click="add"><i class="fa fa-plus"></i>&nbsp;新增</a>
-			</#if>
-			<#if shiro.hasPermission("sys:dept:update")>
-			<a class="btn btn-primary" @click="update"><i class="fa fa-pencil-square-o"></i>&nbsp;修改</a>
-			</#if>
-			<#if shiro.hasPermission("sys:dept:delete")>
-			<a class="btn btn-primary" @click="del"><i class="fa fa-trash-o"></i>&nbsp;删除</a>
-			</#if>
+			<shiro:hasPermission name="sys:dept:save">
+				<a class="btn btn-primary" @click="add"><i class="fa fa-plus"></i>&nbsp;新增</a>
+			</shiro:hasPermission>
+			<shiro:hasPermission name="sys:dept:update">
+				<a class="btn btn-primary" @click="update"><i class="fa fa-pencil-square-o"></i>&nbsp;修改</a>
+			</shiro:hasPermission>
+			<shiro:hasPermission name="sys:dept:delete">
+				<a class="btn btn-primary" @click="del"><i class="fa fa-trash-o"></i>&nbsp;删除</a>
+			</shiro:hasPermission>
 		</div>
 		<table id="deptTable" data-mobile-responsive="true" data-click-to-select="true">
 			<thead>
@@ -69,6 +69,6 @@
 	<ul id="deptTree" class="ztree"></ul>
 </div>
 
-<script src="${request.contextPath}/statics/js/modules/sys/dept.js?_${.now?long}"></script>
+<script th:src="@{/js/modules/sys/dept.js}"></script>
 </body>
 </html>
