--- a/bms-admin/src/main/resources/templates/modules/sys/log.html
+++ b/bms-admin/src/main/resources/templates/modules/sys/log.html
@@ -19,6 +19,6 @@
     
 </div>
 
-<script th:src="@{js/modules/sys/log.js}"></script>
+<script th:src="@{/js/modules/sys/log.js}"></script>
 </body>
 </html>
