--- a/bms-admin/src/main/resources/templates/modules/sys/dict.html
+++ b/bms-admin/src/main/resources/templates/modules/sys/dict.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
 <head>
     <title>字典管理</title>
-	<#include "/header.html">
+    <th:block th:include="/header.html"/>
 </head>
 <body>
-<div id="rrapp" v-cloak>
+<div id="bmsApp" v-cloak>
     <div v-show="showList">
         <div class="grid-btn">
             <div class="form-group col-sm-2">
                 <input type="text" class="form-control" v-model="q.name" @keyup.enter="query" placeholder="字典名称">
             </div>
             <a class="btn btn-default" @click="query">查询</a>
-			<#if shiro.hasPermission("sys:dict:save")>
-            <a class="btn btn-primary" @click="add"><i class="fa fa-plus"></i>&nbsp;新增</a>
-			</#if>
-			<#if shiro.hasPermission("sys:dict:update")>
-            <a class="btn btn-primary" @click="update"><i class="fa fa-pencil-square-o"></i>&nbsp;修改</a>
-			</#if>
-			<#if shiro.hasPermission("sys:dict:delete")>
-            <a class="btn btn-primary" @click="del"><i class="fa fa-trash-o"></i>&nbsp;删除</a>
-			</#if>
+            <shiro:hasPermission name="sys:dict:save">
+                <a class="btn btn-primary" @click="add"><i class="fa fa-plus"></i>&nbsp;新增</a>
+            </shiro:hasPermission>
+            <shiro:hasPermission name="sys:dict:update">
+                <a class="btn btn-primary" @click="update"><i class="fa fa-pencil-square-o"></i>&nbsp;修改</a>
+            </shiro:hasPermission>
+            <shiro:hasPermission name="sys:dict:delete">
+                <a class="btn btn-primary" @click="del"><i class="fa fa-trash-o"></i>&nbsp;删除</a>
+            </shiro:hasPermission>
         </div>
         <table id="jqGrid"></table>
         <div id="jqGridPager"></div>
@@ -74,6 +74,6 @@
     </div>
 </div>
 
-<script src="${request.contextPath}/statics/js/modules/sys/dict.js?_${.now?long}"></script>
+<script th:src="@{/js/modules/sys/dict.js}"></script>
 </body>
 </html>
