--- a/bms-admin/src/main/resources/templates/login.html
+++ b/bms-admin/src/main/resources/templates/login.html
@@ -13,6 +13,9 @@
     <link th:href="@{/css/styles.css}" rel="stylesheet" type="text/css"/>
     <link th:href="@{/css/demo.css}" rel="stylesheet" type="text/css"/>
     <link th:href="@{/css/loaders.css}" rel="stylesheet" type="text/css"/>
+
+    <script type="text/javascript" th:src="@{/js/login/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/vue.js}"></script>
 </head>
 <body>
 <div class='login' id="bmsApp">
@@ -24,9 +27,9 @@
             <div class='icon'>
                 <img alt="" th:src='@{/img/user_icon_copy.png}'>
             </div>
-            <input name="username" placeholder='用户名' v-model="username" maxlength="16" type='text' autocomplete="off" value=""/>
+            <input name="username" placeholder='用户名' v-model="username" maxlength="16" type='text' autocomplete="off"/>
             <div class='validation'>
-                <img alt="" src='img/tick.png'>
+                <img alt="" src='img/tick.png'/>
             </div>
         </div>
         <div class='login_fields__password'>
@@ -35,26 +38,27 @@
             </div>
             <input name="password" placeholder='密码' v-model="password" maxlength="16" type='text' autocomplete="off">
             <div class='validation'>
-                <img alt="" th:src='@{/img/tick.png}'>
+                <img alt="" th:src='@{/img/tick.png}'/>
             </div>
         </div>
         <div class='login_fields__password'>
             <div class='icon'>
-                <img alt="" th:src='@{/img/key.png}'>
+                <img alt="" th:src='@{/img/key.png}'/>
             </div>
             <input name="captcha" placeholder='验证码' v-model="captcha" maxlength="16" type='text' autocomplete="off">
             <div class='validation'>
-                <img alt="" th:src='@{/img/tick.png}'>
+                <img alt="" th:src='@{/img/tick.png}'/>
             </div>
         </div>
         <div class='login_fields__password'>
             <div class="layui-icon ">
-                <img alt="如果看不清楚，请单击图片刷新！" class="pointer" href="javascript:;" :src="src" @click="refreshCode" style="filter:alpha(opacity=30);-moz-opacity:0.3;opacity:0.3; -khtml-opacity: 0.3;">
-                    &nbsp;&nbsp;&nbsp;&nbsp;<a href="javascript:;" @click="refreshCode">点击刷新</a>
+                <img alt="如果看不清楚，请单击图片刷新！" class="pointer" href="javascript:;" :src="src" @click="refreshCode"
+                     style="filter:alpha(opacity=30);-moz-opacity:0.3;opacity:0.3; -khtml-opacity: 0.3;">
+                &nbsp;&nbsp;&nbsp;&nbsp;<a href="javascript:;" @click="refreshCode">点击刷新</a>
             </div>
 
         </div>
-       <div class='login_fields__submit'>
+        <div class='login_fields__submit'>
             <input type='button' @click="login" value='登录'>
         </div>
     </div>
@@ -77,8 +81,7 @@
 
 <link th:href="@{/plugins/layui/css/layui.css}" rel="stylesheet" type="text/css"/>
 
-<script type="text/javascript" th:src="@{/js/login/jquery.min.js}"></script>
-<script type="text/javascript" th:src="@{/js/vue.js}"></script>
+
 <script type="text/javascript" th:src="@{js/login/jquery-ui.min.js}"></script>
 <script type="text/javascript" th:src='@{js/login/stopExecutionOnTimeout.js}'></script>
 <script type="text/javascript" th:src="@{/plugins/layui/layui.js}"></script>
@@ -88,131 +91,131 @@
 <script type="text/javascript">
 
 
-var vm = new Vue({
-    el:'#bmsApp',
-    data:{
-        username: '',
-        password: '',
-        captcha: '',
-        src: 'captcha.jpg'
-    },
-    beforeCreate: function(){
-        if(self != top){
-            top.location.href = self.location.href;
-        }
-    },
-    methods: {
-        refreshCode: function(){
-            this.src = "captcha.jpg?t=" + $.now();
+    var vm = new Vue({
+        el: '#bmsApp',
+        data: {
+            username: '',
+            password: '',
+            captcha: '',
+            src: 'captcha.jpg'
         },
-        login: function (event) {
-            var isTrue = true;
-            layui.use('layer', function () {
-
-            if (vm.username === '') {
-                ErroAlert('请输入您的账号');
-                isTrue= false;
-            } else if (vm.password === '') {
-                ErroAlert('请输入密码');
-                isTrue= false;
-            } else if (vm.captcha === '' || vm.captcha.length != 5) {
-                ErroAlert('输入验证码');
-                isTrue= false;
-            }else{
-                //认证中..
-                //fullscreen();
-                $('.login').addClass('test'); //倾斜特效
-                setTimeout(function () {
-                    $('.login').addClass('testtwo'); //平移特效
-                }, 300);
-                setTimeout(function () {
-                    $('.authent').show().animate({right: -320}, {
-                        easing: 'easeOutQuint',
-                        duration: 600,
-                        queue: false
-                    });
-                    $('.authent').animate({opacity: 1}, {
-                        duration: 200,
-                        queue: false
-                    }).addClass('visible');
-                }, 500);
+        beforeCreate: function () {
+            if (self != top) {
+                top.location.href = self.location.href;
             }
+        },
+        methods: {
+            refreshCode: function () {
+                this.src = "captcha.jpg?t=" + $.now();
+            },
+            login: function (event) {
+                var isTrue = true;
+                layui.use('layer', function () {
 
-            });
-            if(!isTrue){
-                return;
-            }
-            var data = "username="+vm.username+"&password="+vm.password+"&captcha="+vm.captcha;
-            $.ajax({
-                type: "POST",
-                url: "sys/login",
-                data: data,
-                dataType: "json",
-                success: function(result){
-                    if(result.code == 0){//登录成功
-                        parent.location.href ='index.html';
-                    }else{
+                    if (vm.username === '') {
+                        ErroAlert('请输入您的账号');
+                        isTrue = false;
+                    } else if (vm.password === '') {
+                        ErroAlert('请输入密码');
+                        isTrue = false;
+                    } else if (vm.captcha === '' || vm.captcha.length != 5) {
+                        ErroAlert('输入验证码');
+                        isTrue = false;
+                    } else {
+                        //认证中..
+                        //fullscreen();
+                        $('.login').addClass('test'); //倾斜特效
                         setTimeout(function () {
-                            $('.authent').show().animate({right: 90}, {
+                            $('.login').addClass('testtwo'); //平移特效
+                        }, 300);
+                        setTimeout(function () {
+                            $('.authent').show().animate({right: -320}, {
                                 easing: 'easeOutQuint',
                                 duration: 600,
                                 queue: false
                             });
-                            $('.authent').animate({opacity: 0}, {
+                            $('.authent').animate({opacity: 1}, {
                                 duration: 200,
                                 queue: false
                             }).addClass('visible');
-                            $('.login').removeClass('testtwo'); //平移特效
-                            $('.login').removeClass('test'); //倾斜特效
-                        }, 2000);
-                      /*  vm.error = true;
-                        vm.errorMsg = result.msg;*/
-                        layui.use('layer', function () {
-                            ErroAlert(result.msg);
-                        });
-                        vm.refreshCode();
+                        }, 500);
                     }
+
+                });
+                if (!isTrue) {
+                    return;
                 }
-            });
+                var data = "username=" + vm.username + "&password=" + vm.password + "&captcha=" + vm.captcha;
+                $.ajax({
+                    type: "POST",
+                    url: "sys/login",
+                    data: data,
+                    dataType: "json",
+                    success: function (result) {
+                        if (result.code == 0) {//登录成功
+                            parent.location.href = 'index.html';
+                        } else {
+                            setTimeout(function () {
+                                $('.authent').show().animate({right: 90}, {
+                                    easing: 'easeOutQuint',
+                                    duration: 600,
+                                    queue: false
+                                });
+                                $('.authent').animate({opacity: 0}, {
+                                    duration: 200,
+                                    queue: false
+                                }).addClass('visible');
+                                $('.login').removeClass('testtwo'); //平移特效
+                                $('.login').removeClass('test'); //倾斜特效
+                            }, 2000);
+                            /*  vm.error = true;
+                              vm.errorMsg = result.msg;*/
+                            layui.use('layer', function () {
+                                ErroAlert(result.msg);
+                            });
+                            vm.refreshCode();
+                        }
+                    }
+                });
+            }
         }
-    }
-});
+    });
 
 
-$(document).keypress(function (e) {
-    // 回车键事件
-    if (e.which == 13) {
-        $('input[type="button"]').click();
-    }
-});
-//粒子背景特效
-$('body').particleground({
-    dotColor: '#E8DFE8',
-    lineColor: '#133b88'
-});
-$('input[name="password"]').focus(function () {
-    $(this).attr('type', 'password');
-});
-$('input[type="text"]').focus(function () {
-    $(this).prev().animate({'opacity': '1'}, 200);
-});
-$('input[type="text"],input[type="password"]').blur(function () {
-    $(this).prev().animate({'opacity': '.5'}, 200);
-});
-$('input[name="username"],input[name="password"]').keyup(function () {
-    var Len = $(this).val().length;
-    if (!$(this).val() == '' && Len >= 5) {
-        $(this).next().animate({
-            'opacity': '1',
-            'right': '30'
-        }, 200);
-    } else {
-        $(this).next().animate({
-            'opacity': '0',
-            'right': '20'
-        }, 200);
-    }
-});
+    $(document).keypress(function (e) {
+        // 回车键事件
+        if (e.which == 13) {
+            $('input[type="button"]').click();
+        }
+    });
+    //粒子背景特效
+    $('body').particleground({
+        dotColor: '#E8DFE8',
+        lineColor: '#133b88'
+    });
+    $('input[name="password"]').focus(function () {
+        $(this).attr('type', 'password');
+    });
+    $('input[type="text"]').focus(function () {
+        $(this).prev().animate({'opacity': '1'}, 200);
+    });
+    $('input[type="text"],input[type="password"]').blur(function () {
+        $(this).prev().animate({'opacity': '.5'}, 200);
+    });
+    $('input[name="username"],input[name="password"]').keyup(function () {
+        var Len = $(this).val().length;
+        if (!$(this).val() == '' && Len >= 5) {
+            $(this).next().animate({
+                'opacity': '1',
+                'right': '30'
+            }, 200);
+        } else {
+            $(this).next().animate({
+                'opacity': '0',
+                'right': '20'
+            }, 200);
+        }
+    });
 </script>
 
 </body>
