--- a/bms-admin/src/main/resources/templates/login.html
+++ b/bms-admin/src/main/resources/templates/login.html
@@ -34,7 +34,7 @@
         </div>
         <div class='login_fields__password'>
             <div class='icon'>
-                <img alt="" th:src='@{/img/lock_icon_copy.png}'>
+                <img alt="" th:src='@{/img/lock_icon_copy.png}'/>
             </div>
             <input name="password" placeholder='密码' v-model="password" maxlength="16" type='text' autocomplete="off">
             <div class='validation'>
