--- a/bms-admin/src/main/resources/templates/login.html
+++ b/bms-admin/src/main/resources/templates/login.html
@@ -1,222 +1,42 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <title>登录</title>
+    <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="pragma" content="no-cache">
-    <meta http-equiv="cache-control" content="no-cache">
-    <meta http-equiv="expires" content="0">
-    <title>登录界面</title>
-    <link th:href="@{/css/default.css}" rel="stylesheet" type="text/css"/>
-    <!--必要样式-->
-    <link th:href="@{/css/styles.css}" rel="stylesheet" type="text/css"/>
-    <link th:href="@{/css/demo.css}" rel="stylesheet" type="text/css"/>
-    <link th:href="@{/css/loaders.css}" rel="stylesheet" type="text/css"/>
-
-    <script type="text/javascript" th:src="@{/js/login/jquery.min.js}"></script>
-    <script type="text/javascript" th:src="@{/js/vue.js}"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="format-detection" content="telephone=no">
+    <link rel="stylesheet" th:href="@{/plugins/layui/css/layui.css}" media="all" />
+    <link rel="stylesheet" th:href="@{/css/login/login.css}" media="all" />
 </head>
 <body>
-<div class='login' id="bmsApp">
-    <div class='login_title'>
-        <span>管理员登录</span>
-    </div>
-    <div class='login_fields'>
-        <div class='login_fields__user'>
-            <div class='icon'>
-                <img alt="" th:src='@{/img/user_icon_copy.png}'>
-            </div>
-            <input name="username" placeholder='用户名' v-model="username" maxlength="16" type='text' autocomplete="off"/>
-            <div class='validation'>
-                <img alt="" src='img/tick.png'/>
-            </div>
+<video class="video-player" preload="auto" autoplay="autoplay" loop="loop" data-height="1080" data-width="1920" height="1080" width="1920">
+    <source th:src="@{/img/login.mp4}" type="video/mp4">
+    <!-- 此视频文件为支付宝所有，在此仅供样式参考，如用到商业用途，请自行更换为其他视频或图片，否则造成的任何问题使用者本人承担，谢谢 -->
+</video>
+<div class="video_mask"></div>
+<div class="login" id="bmsBoot" v-cloak>
+    <h1>BMS-ADMIN</h1>
+    <form class="form-group">
+        <div class="layui-form-item">
+            <input class="layui-input" v-model="username" placeholder="用户名" type="text" autocomplete="off">
         </div>
-        <div class='login_fields__password'>
-            <div class='icon'>
-                <img alt="" th:src='@{/img/lock_icon_copy.png}'/>
-            </div>
-            <input name="password" placeholder='密码' v-model="password" maxlength="16" type='text' autocomplete="off">
-            <div class='validation'>
-                <img alt="" th:src='@{/img/tick.png}'/>
-            </div>
+        <div class="layui-form-item">
+            <input class="layui-input" v-model="password" placeholder="密码" type="password" autocomplete="off">
         </div>
-        <div class='login_fields__password'>
-            <div class='icon'>
-                <img alt="" th:src='@{/img/key.png}'/>
-            </div>
-            <input name="captcha" placeholder='验证码' v-model="captcha" maxlength="16" type='text' autocomplete="off">
-            <div class='validation'>
-                <img alt="" th:src='@{/img/tick.png}'/>
-            </div>
+        <div class="layui-form-item form_code">
+            <input class="layui-input" v-model="captcha" placeholder="验证码" @keyup.enter="login" type="text" autocomplete="off">
+            <div class="code"><img :src="src" width="116" height="36" @click="refreshCode"/></div>
         </div>
-        <div class='login_fields__password'>
-            <div class="layui-icon ">
-                <img alt="如果看不清楚，请单击图片刷新！" class="pointer" href="javascript:;" :src="src" @click="refreshCode"
-                     style="filter:alpha(opacity=30);-moz-opacity:0.3;opacity:0.3; -khtml-opacity: 0.3;">
-                &nbsp;&nbsp;&nbsp;&nbsp;<a href="javascript:;" @click="refreshCode">点击刷新</a>
-            </div>
-
-        </div>
-        <div class='login_fields__submit'>
-            <input type='button' @click="login" value='登录'>
-        </div>
-    </div>
-    <div class='success'>
-    </div>
-    <div class='disclaimer'>
-    </div>
+        <button class="layui-btn login_btn" type="button" @click="login">登录</button>
+    </form>
 </div>
-<div class='authent'>
-    <div class="loader" style="height: 44px;width: 44px;margin-left: 28px;">
-        <div class="loader-inner ball-clip-rotate-multiple">
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-    </div>
-    <p>认证中...</p>
-</div>
-<div class="OverWindows"></div>
-
-<link th:href="@{/plugins/layui/css/layui.css}" rel="stylesheet" type="text/css"/>
-
-
-<script type="text/javascript" th:src="@{js/login/jquery-ui.min.js}"></script>
-<script type="text/javascript" th:src='@{js/login/stopExecutionOnTimeout.js}'></script>
+<script type="text/javascript" th:src="@{/js/jquery.js}"></script>
+<script type="text/javascript" th:src="@{/js/vue.js}"></script>
 <script type="text/javascript" th:src="@{/plugins/layui/layui.js}"></script>
-<script type="text/javascript" th:src="@{js/login/Particleground.js}"></script>
-<script type="text/javascript" th:src="@{/js/login/Treatment.js}"></script>
-<script type="text/javascript" th:src="@{/js/login/jquery.mockjax.js}"></script>
-<script type="text/javascript">
-
-
-    var vm = new Vue({
-        el: '#bmsApp',
-        data: {
-            username: '',
-            password: '',
-            captcha: '',
-            src: 'captcha.jpg'
-        },
-        beforeCreate: function () {
-            if (self != top) {
-                top.location.href = self.location.href;
-            }
-        },
-        methods: {
-            refreshCode: function () {
-                this.src = "captcha.jpg?t=" + $.now();
-            },
-            login: function (event) {
-                var isTrue = true;
-                layui.use('layer', function () {
-
-                    if (vm.username === '') {
-                        ErroAlert('请输入您的账号');
-                        isTrue = false;
-                    } else if (vm.password === '') {
-                        ErroAlert('请输入密码');
-                        isTrue = false;
-                    } else if (vm.captcha === '' || vm.captcha.length != 5) {
-                        ErroAlert('输入验证码');
-                        isTrue = false;
-                    } else {
-                        //认证中..
-                        //fullscreen();
-                        $('.login').addClass('test'); //倾斜特效
-                        setTimeout(function () {
-                            $('.login').addClass('testtwo'); //平移特效
-                        }, 300);
-                        setTimeout(function () {
-                            $('.authent').show().animate({right: -320}, {
-                                easing: 'easeOutQuint',
-                                duration: 600,
-                                queue: false
-                            });
-                            $('.authent').animate({opacity: 1}, {
-                                duration: 200,
-                                queue: false
-                            }).addClass('visible');
-                        }, 500);
-                    }
-
-                });
-                if (!isTrue) {
-                    return;
-                }
-                var data = "username=" + vm.username + "&password=" + vm.password + "&captcha=" + vm.captcha;
-                $.ajax({
-                    type: "POST",
-                    url: "sys/login",
-                    data: data,
-                    dataType: "json",
-                    success: function (result) {
-                        if (result.code == 0) {//登录成功
-                            parent.location.href = 'index.html';
-                        } else {
-                            setTimeout(function () {
-                                $('.authent').show().animate({right: 90}, {
-                                    easing: 'easeOutQuint',
-                                    duration: 600,
-                                    queue: false
-                                });
-                                $('.authent').animate({opacity: 0}, {
-                                    duration: 200,
-                                    queue: false
-                                }).addClass('visible');
-                                $('.login').removeClass('testtwo'); //平移特效
-                                $('.login').removeClass('test'); //倾斜特效
-                            }, 2000);
-                            /*  vm.error = true;
-                              vm.errorMsg = result.msg;*/
-                            layui.use('layer', function () {
-                                ErroAlert(result.msg);
-                            });
-                            vm.refreshCode();
-                        }
-                    }
-                });
-            }
-        }
-    });
-
-
-    $(document).keypress(function (e) {
-        // 回车键事件
-        if (e.which == 13) {
-            $('input[type="button"]').click();
-        }
-    });
-    //粒子背景特效
-    $('body').particleground({
-        dotColor: '#E8DFE8',
-        lineColor: '#133b88'
-    });
-    $('input[name="password"]').focus(function () {
-        $(this).attr('type', 'password');
-    });
-    $('input[type="text"]').focus(function () {
-        $(this).prev().animate({'opacity': '1'}, 200);
-    });
-    $('input[type="text"],input[type="password"]').blur(function () {
-        $(this).prev().animate({'opacity': '.5'}, 200);
-    });
-    $('input[name="username"],input[name="password"]').keyup(function () {
-        var Len = $(this).val().length;
-        if (!$(this).val() == '' && Len >= 5) {
-            $(this).next().animate({
-                'opacity': '1',
-                'right': '30'
-            }, 200);
-        } else {
-            $(this).next().animate({
-                'opacity': '0',
-                'right': '20'
-            }, 200);
-        }
-    });
-</script>
-
+<script type="text/javascript" th:src="@{/js/login/login.js}"></script>
 </body>
 </html>
